# LiteRT

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output_image.ppm
.cache/clangd/index/: Enity.h.83DC363F573B36A2.idx  Material.h.1488CEC391BBF0C5.idx  Math.h.198C3FF259234579.idx  PPM.h.F588944EDCACA8C1.idx  Ray.h.E4DD3EEEFF369050.idx  _fixes.hpp.4E2D47A7B36BF67F.idx  _vectorize.hpp.C49CB7E96347CD84.idx  common.hpp.8B5A99416853F058.idx  compute_common.hpp.DA4B2555E5C503E9.idx  compute_vector_relational.hpp.B55B585AE70651BA.idx  exponential.hpp.3E4657B81138C611.idx  func_common.inl.B793FED84F7EB7A1.idx  func_exponential.inl.8DEE55C403571630.idx  func_geometric.inl.AFBFA20CBE11D086.idx  func_integer.inl.5C8152CEA56E92EC.idx  func_matrix.inl.48634A4263FC842A.idx  func_packing.inl.8347E60395FBE734.idx  func_trigonometric.inl.E3FC22E682DB025B.idx  func_vector_relational.inl.B665EF339928906C.idx  fwd.hpp.34D1ED9A5A201550.idx  geometric.hpp.BD3CFAA04CC36455.idx  glm.hpp.2242BC9002EC7F34.idx  integer.hpp.4D3C0D680A7AF8B4.idx  main.cpp.C9F0EB9DCBFCA969.idx  mat2x2.hpp.198C86FEC2AAC638.idx  mat2x3.hpp.D619E751881C9C09.idx  mat2x4.hpp.D5CF241FECD2ED91.idx  mat3x2.hpp.973E070A952C4CE9.idx  mat3x3.hpp.31D6A634D9BAC3B5.idx  mat3x4.hpp.B489E174922F9C4F.idx  mat4x2.hpp.3ABAE9D462082EA4.idx  mat4x3.hpp.29ADC6BF40FBE74D.idx  mat4x4.hpp.AB4F67A6D377613A.idx  matrix.hpp.9AB1B4FBD821F752.idx  matrix_double2x2.hpp.1C1648D178C52AF3.idx  matrix_double2x2_precision.hpp.72C1665E0A2C5F4C.idx  matrix_double2x3.hpp.E24D1A790D6892C5.idx  matrix_double2x3_precision.hpp.8B47EFE1C0E8EF9B.idx  matrix_double2x4.hpp.D611ABD52F50723C.idx  matrix_double2x4_precision.hpp.2E868F403F703B7D.idx  (+99 more)
assets/: CMakeLists.txt
assets/models/: CMakeLists.txt  Cornell-Box-Empty.mtl
assets/shaders/: CMakeLists.txt  CopyRes.frag  PathTracing.frag  PathTracing.vert  Present.frag  RayTracing.frag  RayTracing.vert  Test.frag
assets/shaders/include/: Data.h  Utility.h
ext/: CMakeLists.txt
include/: Application.h  BVH.h  Buffer.h  Camera.h  Console.h  DataTypes.h  Debug.h  Enity.h  Material.h  Math.h  MathUtility.h  PPM.h  Ray.h  RenderPass.h  SceneManager.h  ShaderProgram.h  obj_loader.h
src/: Application.cpp  Buffer.cpp  Camera.cpp  RenderPass.cpp  SceneManger.cpp  ShaderProgram.cpp
